Covid Banner top spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1979,7 +1979,7 @@ input, select, textarea {
 		text-align: center;
 		background-image: linear-gradient(to right, #ff6200, #f27f2c);
 		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.05);
-		padding: 0;
+		padding-top: 2em;
 		margin-bottom: 2em;
 	
 	}
